--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = app/db/migrations
+script_location = src/db/migrations
 
 # template for migration file names
 file_template = %%(rev)s_%%(slug)s
