--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - "8000:8000"
     volumes:
       # Mount the application source code for live reloading
-      - ./app:/app
+      - .:/app
       # Mount the host's data directory to persist the database, bills, and logs
       - ./data:/app/data
       # Mount a separate directory for Google Cloud credentials
