Migrate from Python/Docker to Firebase/React SPA
Complete migration from the old Python/SQLite/Docker architecture to Firebase:

REMOVED:
- Python FastAPI backend (src/)
- SQLite database with SQLModel/Alembic
- Docker/Docker Compose setup
- APScheduler for background jobs

ADDED:
- React SPA with Vite + TypeScript (web/)
- Firebase SDK (Auth, Firestore, Storage)
- Cloud Functions for email sending and scheduled tasks (functions/)
- Cloud Run Playwright scraper (scraper/)
- Firebase Hosting, Firestore rules, Storage rules

FEATURES:
- Google OAuth authentication with role-based access (admin/member)
- Auto-scraping bills from Seattle Utilities
- Gmail OAuth for sending invoices
- User management with bootstrap admin flow
- Real-time scraper status updates

Deployed to:
- Web: https://utilitysplitter.web.app
- Scraper: https://utility-scraper-xxx.us-central1.run.app

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,43 @@
-# Python-generated files
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+build/
+*.egg-info
 __pycache__/
 *.py[oc]
-build/
-dist/
-wheels/
-*.egg-info
 
-# Virtual environments
-.venv
+# Firebase
+.firebase/
 
-# App Specific
+# App data (local only)
 bills/
 data/
-qdrant_storage/
+
+# Environment & Secrets
+.env
+.env.local
+.env.*.local
+functions/.env
+web/.env
+web/.env.local
+gcreds/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+
+# Python virtual environments
+.venv/
+venv/
