--- a/scraper/pyproject.toml
+++ b/scraper/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "playwright>=1.40.0",
     "pypdf2>=3.0.0",
     "google-cloud-secret-manager>=2.0.0",
+    "requests>=2.31.0",
 ]
 
 [tool.uv]
